<resources>
    <string name="app_name">Oldageparadise</string>


    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>

    <string name="prompt_user_name">User Name</string>

    <string name="prompt_password">Password</string>

    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="action_sign_in">Sign in </string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>

    <string name="invalid_username">Not a valid username</string>

    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>

    <string name="action_sign_up">Sign Up</string>

</resources>