<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F1E0E0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/signupusername"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:drawablePadding="7dp"
        android:hint="@string/prompt_user_name"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpuseremail"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="7dp"
        android:hint="@string/prompt_email"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupusername"
          />

    <EditText
        android:id="@+id/signUppassword"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="7dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpuseremail" />

    <EditText
        android:id="@+id/Signupconfirm_password"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="7dp"
        android:hint="@string/prompt_confirm_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUppassword" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="115dp"
        android:layout_height="46dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#FFB39C"
        android:enabled="true"
        android:text="@string/action_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUppassword"
        app:layout_constraintVertical_bias="0.673" />
    <ProgressBar
        android:id="@+id/signUploading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpButton"
        app:layout_constraintVertical_bias="0.954" />


</androidx.constraintlayout.widget.ConstraintLayout>